# SmartServe

./: .env.example  .gitignore  face_image_urls.json  manage.py  pyproject.toml  test_data.json.example
core/: settings.py  urls.py  views.py  wsgi.py
smartserve/: admin.py  admin_filters.py  admin_inlines.py  apps.py  exceptions.py  urls.py
smartserve/admin/: __init__.py  filters.py  forms.py  inlines.py
smartserve/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_date_joined_and_more.py  0002_menuitem_alter_restaurant_name_and_more.py  0002_seat.py  0003_booking_alter_seat_options_seatbooking_and_more.py  0003_menuitem_available_at_restaurants_and_more.py  0003_restaurant.py  0004_alter_restaurant_employees.py  0004_remove_booking_check_start_end_seat_location_index_and_more.py  0005_alter_restaurant_employees.py  0006_alter_restaurant_employees.py
smartserve/models/: __init__.py  managers.py  signals.py  utils.py
smartserve/tests/: utils.py
smartserve/tests/model_tests/: __init__.py  signal_tests.py
