[tool.poetry]
name = "SmartServe"
version = "0.0.1"
description = ""
authors = ["CarrotManMatt <matt@carrotmanmatt.com>"]
keywords = ["django-rest-framework"]
classifiers = [
    "Private :: Do Not Upload",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
    "Topic :: Internet"
]

[tool.poetry.dependencies]
python = "^3.11.3"
django = "^4.2"
djangorestframework = "^3.14.0"
django-rest-knox = "^4.2.0"
django-environ = "^0.10.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.0"}
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.14.0"}

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"
